--- a/index.html
+++ b/index.html
@@ -73,6 +73,25 @@
                 hangman?
             </div>
         </div>
+        <div class="game-card">
+            <div class="game-info">
+                <div>
+                    <img
+                    src="./img/chromedino.jpeg"
+                    alt="chromedino">
+                </div>
+                <div>
+                    <div class="game-name">chrome dino</div>
+                    <div class="card-link">
+                        <i class="chromedino" aria-hidden="true"></i>
+                        <a href="./chromedino/index.html">Play</a>
+                    </div>
+                </div>
+            </div>
+            <div class="game-description">
+                How long can you make your dino survive? 
+            </div>
+        </div>
     </main>
 </body>
 </html>
