--- a/chromedino/index.html
+++ b/chromedino/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="dino.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,32 +20,11 @@
             </div>
         </div>
     </header>
-    <canvas id="canvas"></canvas>
+    <div>
+        <canvas id="canvas"></canvas>
+    </div>
     <p id="timerDisplay"></p> 
     <button onclick="restartGame()">reset</button> 
     <script src="main.js"></script>
-    <script>
-        function updateTimerDisplay() {
-            document.getElementById('timerDisplay').innerText = "Timer: " + gameTime +"s";
-            setTimeout(updateTimerDisplay, 100);
-        }
-        updateTimerDisplay();
-        function restartGame() {
-            gamespeed = 1;
-            dino.x = 10;
-            dino.y = 500;
-            timer = 0;
-            gameTime = 0;
-            obstackle = false;
-            countAfterobstackle = 0;
-            cactusmultiple = [];
-            backgroundmultiple = [];
-            jumptimer = 0;
-            animaition;
-            ifOnTheGround = true;
-            cancelAnimationFrame(animaition);
-            game();
-        }
-    </script>
 </body>
 </html>
