--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div>
                     <div class="game-name">chrome dino</div>
                     <div class="card-link">
-                        <i class="chromedino" aria-hidden="true"></i>
+                        <i class="fa fa-play" aria-hidden="true"></i>
                         <a href="./chromedino/index.html">Play</a>
                     </div>
                 </div>
