--- a/about.html
+++ b/about.html
@@ -33,6 +33,15 @@
             </div>
         </div>
         <div class="about-game-card">
+            <div class="game-title">Chrome Dino</div>
+            <div class="game-instructions">
+                Avoid cactuses and pterosaurs. The moving speed of objects 
+                increases every 10 seconds, making it even harder to survive. 
+                Try to survive your longest survival time. It won't be as easy 
+                as you think.
+            </div>
+        </div>
+        <div class="about-game-card">
             <div class="game-title">Hangman</div>
             <div class="game-instructions">
                 Step up to the challenge of our Hangman game! Test your
